# tulip

./: .gitignore  README.md  cabal.project  tulip.cabal  weblisp.cabal
examples/: bool.tulip  bool.wl  id.wl  list.wl  nat.wl
src/: Ast.hs  Display.hs  Eval.hs  Generate.hs  GetSpan.hs  Main.hs  Parse.hs  Report.hs  Tulip.hs
