cabal-version: 3.6
name: tulip
version: 0.1.0.0

common shared
  default-language: GHC2021
  default-extensions:
    LambdaCase
  ghc-options:
    -Weverything
    -Wno-missing-safe-haskell-mode
    -Wno-implicit-prelude
    -Wno-missing-kind-signatures
    -Wno-missing-deriving-strategies
    -Wno-name-shadowing
    -Wno-unsafe
    -Wno-missing-import-lists
    -Wno-prepositive-qualified-module
    -Wno-unused-do-bind
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-monomorphism-restriction

executable tulip
  import: shared
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Parse
    , Generate
    , Eval
    , Ast
    , GetSpan
    , Report
  build-depends:
    base
    , extra
    , directory
    , transformers
    , parss
