cabal-version: 3.6
name: tulip
version: 0.1.0.0

common shared
  default-language: GHC2021
  default-extensions:
    LambdaCase
  ghc-options:
    -Weverything
    -Wno-missing-safe-haskell-mode
    -Wno-implicit-prelude
    -Wno-missing-kind-signatures
    -Wno-missing-deriving-strategies
    -Wno-name-shadowing
    -Wno-unsafe
    -Wno-missing-import-lists
    -Wno-prepositive-qualified-module
    -Wno-unused-do-bind
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-monomorphism-restriction

library
  import: shared
  hs-source-dirs: src
  exposed-modules:
    Tulip
  other-modules:
    Parse
    , Eval
    , Ast
    , GetSpan
    , Display
    , Report
  build-depends:
    base
    , extra
    , transformers
    , parss

executable tulip
  import: shared
  hs-source-dirs: bin
  main-is: Main.hs
  build-depends:
    base
    , directory
    , tulip
