cabal-version: 2.4
name: tulip
version: 0.1.0.0

common common
  default-language: Haskell2010
  default-extensions:
    LambdaCase
    , NamedFieldPuns
    , FlexibleInstances
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-name-shadowing
    -Wno-unsafe
    -Wno-missing-import-lists
    -Wno-unused-do-bind
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-monomorphism-restriction
    -Wno-missing-local-signatures
    -Wno-safe

library
  import: common
  hs-source-dirs: src
  exposed-modules:
    Tulip
  other-modules:
    Parse
    , Eval
    , Ast
    , GetSpan
    , Display
    , Report
  build-depends:
    base
    , extra
    , transformers
    , parss

executable tulip
  import: common
  hs-source-dirs: bin
  main-is: Main.hs
  build-depends:
    base
    , directory
    , tulip
